[workspace]
resolver = "2"
members = ["core", "glane", "widgets"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "GUI layout library"
repository = "https://github.com/btanno/glane"

[workspace.dependencies]
num = "0.4"
rustybuzz = "0.20"

[profile.release-debug]
inherits = "release"
debug = 1