[package]
name = "glane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
gedv = { version = "0.2.0", features = ["serde"] }
num = "0.4.1"
rustybuzz = "0.12.1"
sys-locale = "0.3.1"
ttf-parser = "0.20.0"

