[package]
name = "glane-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
gedv = { version = "0.3", features = ["serde"] }
sys-locale = "0.3"
ttf-parser = "0.25"
num.workspace = true
rustybuzz.workspace = true
