[package]
name = "glane"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
glane-core = { path = "../core" }
glane-widgets = { path = "../widgets" }

[dev-dependencies]
anyhow = "1.0"
pnte = "0.2"
wiard = "0.1"

