[package]
name = "glane"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
glane-core = { path = "../core" }
glane-widgets = { path = "../widgets" }

[dev-dependencies]
anyhow = "1.0"
divan = "0.1"
pnte = "0.2"
wiard = "0.3"

[[bench]]
name = "one_frame"
harness = false
